--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Run Python Script Every 10 Minutes
 
 on:
   schedule:
-    - cron: '*/10 * * * *'
+ #   - cron: '*/10 * * * *'
 
 jobs:
   run-script:
